apps/uptime-kuma/uptime-kuma-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: uptime-kuma
  name: uptime-kuma
