apps/uptime-kuma/uptime-kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /status/morrislan$1
spec:
  ingressClassName: nginx
  rules:
  - host: status.morrislan.net
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: uptime-kuma
            port:
              number: 80
  tls:
  - hosts:
    - status.morrislan.net
    secretName: uptime-kuma-tls
